# lib/db/src/schema/index.ts
@@ -12,3 +12,4 @@ export * from "./collection_runs";
 export * from "./assets";
 export * from "./observations";
 export * from "./ot_fleets";
+export * from "./vendor_assessments";
